[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mpp"
authors = [
    {name = "Jianxiao Wu", email = "j.wu@fz-juelich.de"}
]
description = "Multimodal brain-based psychometric prediction"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
keywords = ["neuroimaging", "multimodal"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Neuroscience :: Neuroimaging",
]
dependencies = [
    "nipype ~= 1.8.5",
    "h5py ~= 3.7.0",
    "datalad ~= 0.17.7",
    "nibabel ~= 4.0.2",
    "pandas ~= 1.3.5",
    "bctpy ~= 0.5.2",
    "rdcmpy @ git+https://github.com/jadecci/rDCM_py@v0.1",
    "numpy ~= 1.21.6",
    "scipy ~= 1.7.3",
    "scikit-learn ~= 1.0.2",
]
dynamic = ["version"]

[project.scripts]
mpp = "mpp.main:main"
mfe = "mpp.mfe.main:main"

[project.urls]
repository = "https://github.com/jadecci/mpp"
repository-gin = "https://gin.g-node.org/jadecci/MPP"

[tool.setuptools]
packages = ["mpp"]

[tool.setuptools.dynamic]
version = {attr = "mpp.VERSION"}
