[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mpp"
authors = [
    {name = "Jianxiao Wu", email = "j.wu@fz-juelich.de"}
]
description = "Multimodal brain-based psychometric prediction"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
keywords = ["neuroimaging", "multimodal"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Neuroscience :: Neuroimaging",
]
dependencies = [
    "nipype ~= 1.8.5",
    "h5py ~= 3.10.0",
    "datalad ~= 0.19.0",
    "nibabel ~= 5.2.0",
    "pandas ~= 2.1.4",
    "bctpy ~= 0.6.0",
    "numpy ~= 1.26.0",
    "scipy ~= 1.11.0",
    "scikit-learn ~= 1.3.2",
    "mapalign @ git+https://github.com/satra/mapalign@3e8c7af51355896666e24d49544b1afa47e78364",
    "psutil ~= 5.0",
    "statsmodels ~= 0.14.0",
    "rdcmpy @ git+https://github.com/jadecci/rDCM_py@v0.2",
    "hcpdiffpy @ git+https://github.com/jadecci/hcp_pipeline_diffusion_py.git@0.4.4",
    "tables ~= 3.9.0",
]
dynamic = ["version"]

[project.scripts]
mpp = "mpp.main:main"
mfe = "mpp.mfe.main:main"
mfe_dti = "mpp.mfe.dti:main"

[project.urls]
repository = "https://github.com/jadecci/mpp"
repository-gin = "https://gin.g-node.org/jadecci/MPP"

[tool.setuptools]
packages = ["mpp"]

[tool.setuptools.dynamic]
version = {attr = "mpp.VERSION"}
